--- a/sections/ii-declaration.tex
+++ b/sections/ii-declaration.tex
@@ -6,7 +6,7 @@
 \vspace*{1in}
 \noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
     \centering
-    This thesis is submitted in partial fulfilment\\
+    This thesis is submitted in fulfilment\\
     of the requirements for the degree of\\[3ex]
 
     \textsc{\large Doctor of Philosophy}\\[3ex]
