--- a/sections/v-lastpage.tex
+++ b/sections/v-lastpage.tex
@@ -7,14 +7,15 @@
 \noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
 \flushleft
 \begin{small}
-    Cover art: Rost, Randi~J., OpenGL Shading Language, 2nd ed.\\
-    (ISBN 0-321-33489-2)
+    % Cover art: Rost, Randi~J., OpenGL Shading Language, 2nd ed.
+    % (ISBN 0-321-33489-2)\\
+    % \url{https://en.wikipedia.org/wiki/Randi_J._Rost}
 
-    \vspace{4ex}
+    % \vspace{4ex}
 %
 %    \emph{\project} copyright \copyright\ 2009, Trevor L. McDonell\\
 %    Original Author: Trevor L. McDonell (trevor.mcdonell@gmail.com)
 
-    Copyright \copyright\ 2009--2014, Trevor L.\ McDonell
+    Copyright \copyright\ 2009--2015, Trevor L.\ McDonell
 \end{small}
 \end{minipage}}
