--- a/title.tex
+++ b/title.tex
@@ -10,7 +10,7 @@
 \addtolength{\centeroffset}{0.5\evensidemargin}
 \thispagestyle{empty}
 \vspace*{\stretch{1}}
-\noindent\hspace*{\centeroffset}\makebox[0pt][l]{
+\noindent\hspace*{\centeroffset}\makebox[0pt][l]{%
 \begin{minipage}{\textwidth}
     \centering
     \hrule height 0.8pt
@@ -28,36 +28,57 @@
     \hrule
 \end{minipage}}
 
-\vspace{4ex}
-\noindent\hspace*{\centeroffset}\makebox[0pt][l]{
+\vspace{5ex}
+\noindent\hspace*{\centeroffset}\makebox[0pt][l]{%
 \begin{minipage}{\textwidth}
     \centering
-    \textsc{\Large Trevor~L.~McDonell}\\[1.5ex]
+    \textsc{\Large Trevor~L.~McDonell}\\[3ex]
 
-    \textsc{School of Computer Science and Engineering}\\
-    \textsc{University of New South Wales}
+    \textsc{a thesis in fulfilment of the requirements for the degree of}\\[0.5ex]
+    \textsc{\large Doctor of Philosophy}
+
+    % \textsc{School of Computer Science and Engineering}\\
+    % \textsc{University of New South Wales}
 
 %    \textit{200220499}
 %    \textcolor{White}{\textit{200220499}}
 \end{minipage}}
 
-\vspace{4ex}
-\noindent\hspace*{\centeroffset}\makebox[0pt][l]{
+% \vspace{4ex}
+% \noindent\hspace*{\centeroffset}\makebox[0pt][l]{
+% \begin{minipage}{\textwidth}
+%     \centering
+%     % \ifoptionfinal{\today}{DRAFT: \today}
+%     \ifoptionfinal{August 2015}{DRAFT: \today}
+% \end{minipage}}
+
+\vspace{6ex}
+\noindent\hspace*{\centeroffset}\makebox[0pt][l]{%
 \begin{minipage}{\textwidth}
     \centering
-    \ifoptionfinal{\today}{DRAFT: \today}
+    % \hspace{0.5cm}\includegraphics{images/title/julia-elephant-s}
+    % \vspace*{1.87333708001in} % height of julia-elephant-s
+
+    \includegraphics[height=1.87in]{images/title/unsw-logo}
+   % \vspace*{1.87in}
 \end{minipage}}
 
 \vspace{6ex}
-\noindent\hspace*{\centeroffset}\makebox[0pt][l]{
+\noindent\hspace*{\centeroffset}\makebox[0pt][l]{%
 \begin{minipage}{\textwidth}
     \centering
-    \hspace{0.5cm}\includegraphics{images/title/julia-elephant-s}
-    \vspace*{1.87333708001in}	% height of julia-elephant-s
-
-%    \hspace{0.5cm}\includegraphics[height=1.87in]{images/misc/placeholder}
-%    \vspace*{1.87in}
+    \textsc{School of Computer Science and Engineering}\\
+    \textsc{University of New South Wales}
 \end{minipage}}
 
+\vspace{4ex}
+\noindent\hspace*{\centeroffset}\makebox[0pt][l]{%
+\begin{minipage}{\textwidth}
+    \centering
+    % \ifoptionfinal{\today}{DRAFT: \today}
+    \ifoptionfinal{August 2015}{DRAFT: \today}
+\end{minipage}}
+
+\vspace*{1.87333708001in}   % height of julia-elephant-s
 \vspace{\stretch{2}}
 
