Add extra declations required for final library submission

--- a/sections/ii-declaration.tex
+++ b/sections/ii-declaration.tex
@@ -32,7 +32,9 @@
 
 \cleardoublepage
 \vspace*{1in}
-\noindent I hereby declare that this submission is my own work and to the best
+\subsubsection*{Originality Statement}
+
+I hereby declare that this submission is my own work and to the best
 of my knowledge it contains no materials previously published or written by
 another person, or substantial proportions of material which have been accepted
 for the award of any other degree or diploma at UNSW or any other educational
@@ -44,7 +46,66 @@ extent that assistance from others in the project's design and conception or in
 style, presentation and linguistic expression is acknowledged.
 
 \vspace{5mm}
+\noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
+    \centering
+    \begin{tabular}[b]{cc}
+      \iftoggle{public}{%
+        \phantom{\framebox(228,57){}} &
+        \phantom{\today}
+      }{%
+        \includegraphics{images/signature} &
+        \today \hspace{8mm}
+      }
+    \end{tabular} \\
+    \hfill{} \textsc{trevor lee mcdonell} \hfill{} \textsc{date} \hfill{}
+\end{minipage}}
 
+
+\cleardoublepage
+\vspace*{1in}
+\subsubsection*{Copyright Statement}
+
+I hereby grant the University of New South Wales or its agents the right to
+archive and to make available my thesis or dissertation in whole or part in the
+University libraries in all forms of media, now and here after known, subject to
+the provisions of the Copyright Act 1968. I retain all proprietary rights, such
+as patent rights. I also retain the right to use in future works (such as
+articles or books) all or part of this thesis or dissertation.
+
+I also authorise University Microfilms to use the 350 word abstract of my thesis
+in Dissertation Abstract International.
+
+I have either used no substantial portions of copyright material in my thesis or
+I have obtained permission to use copyright material; where permission has not
+been granted I have applied/will apply for a partial restriction of the digital
+copy of my thesis or dissertation.
+
+\vspace{5mm}
+\noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
+    \centering
+    \begin{tabular}[b]{cc}
+      \iftoggle{public}{%
+        \phantom{\framebox(228,57){}} &
+        \phantom{\today}
+      }{%
+        \includegraphics{images/signature} &
+        \today \hspace{8mm}
+      }
+    \end{tabular} \\
+    \hfill{} \textsc{trevor lee mcdonell} \hfill{} \textsc{date} \hfill{}
+\end{minipage}}
+
+
+\cleardoublepage
+\vspace*{1in}
+\subsubsection*{Authenticity Statement}
+
+I certify that the Library deposit digital copy is a direct equivalent
+of the final officially approved version of my thesis. No emendation of content
+has occurred and if there are any minor variations in formatting, they are the
+result of the conversion to digital format.
+
+\vspace{5mm}
 \noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
     \centering
     \begin{tabular}[b]{cc}
