Only include the signed statements in the private version

--- a/sections/ii-declaration.tex
+++ b/sections/ii-declaration.tex
@@ -2,6 +2,11 @@
 % sec-ii-declaration.tex
 %
 
+\iftoggle{public}{%
+  % nothing
+}{%
+  % Include signed statements of originality, copyright, and authenticity
+
 \pagebreak
 \vspace*{1in}
 \noindent\makebox[0pt][l]{\begin{minipage}{\textwidth}
@@ -119,4 +124,6 @@ result of the conversion to digital format.
     \end{tabular} \\
     \hfill{} \textsc{trevor lee mcdonell} \hfill{} \textsc{date} \hfill{}
 \end{minipage}}
+
+} % public
 
