title page: year only

--- a/title.tex
+++ b/title.tex
@@ -76,7 +76,7 @@
 \begin{minipage}{\textwidth}
     \centering
     % \ifoptionfinal{\today}{DRAFT: \today}
-    \ifoptionfinal{August 2015}{DRAFT: \today}
+    \ifoptionfinal{2015}{DRAFT: \today}
 \end{minipage}}
 
 \vspace*{1.87333708001in}   % height of julia-elephant-s
